--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "airtable": "^0.8.1",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.12.0",
     "core-js": "^3.6.4",
+    "d3": "^3.5.17",
+    "express": "^4.17.1",
+    "jquery": "^3.5.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
